add jwt validation method with grpc call on quiz microservice
