# api/userSwagger.yml
@@ -97,6 +97,8 @@ definitions:
         type: string
         format: uuid
         readOnly: true
+      isAdmin:
+        type: boolean
       createdAt:
         type: string
         format: date-time
@@ -153,9 +155,8 @@ definitions:
       email:
         type: string
         format: email
-      exp:
-        type: string
-        format: date-time
+      isAdmin:
+        type: boolean
 
 
 securityDefinitions:
